crates/jarl/tests/integration/snapshots/integration__toml__exclude_nested_directory_pattern.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---

success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> other/main.R:1:1
  |
1 | any(is.na(z))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
